Almost done with Jisho API integration

--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -187,5 +187,10 @@
   "jisho_resultData_onyomi": "On'yomi",
   "jisho_resultData_phrases_label": "Ejemplos de frases",
   "jisho_resultData_examples_label": "Ejemplos",
-  "jisho_resultData_powered_by": "Desarrollado por Jisho & @h7x4"
+  "jisho_resultData_powered_by": "Desarrollado por Jisho & @h7x4",
+  "jisho_phraseData_common": "Común",
+  "jisho_phraseData_uncommon": "Poco Común",
+  "jisho_phraseData_show_meanings": "Mostrar más significados",
+  "jisho_phraseData_search_individually": "Buscar individualmente",
+  "jisho_phraseData_readings": "Lecturas"
 }
