--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -187,5 +187,10 @@
   "jisho_resultData_onyomi": "On'yomi",
   "jisho_resultData_phrases_label": "Beispiele Phrasen",
   "jisho_resultData_examples_label": "Beispiele",
-  "jisho_resultData_powered_by": "Angetrieben durch Jisho & @h7x4"
+  "jisho_resultData_powered_by": "Angetrieben durch Jisho & @h7x4",
+  "jisho_phraseData_common": "Allgemein",
+  "jisho_phraseData_uncommon": "Ungebräuchlich",
+  "jisho_phraseData_show_meanings": "Mehr Bedeutungen anzeigen",
+  "jisho_phraseData_search_individually": "Individuell suchen",
+  "jisho_phraseData_readings": "Lesungen"
 }
