--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -187,5 +187,10 @@
   "jisho_resultData_onyomi": "On'yomi",
   "jisho_resultData_phrases_label": "Examples phrases",
   "jisho_resultData_examples_label": "Examples",
-  "jisho_resultData_powered_by": "Powered by Jisho & @h7x4"
+  "jisho_resultData_powered_by": "Powered by Jisho & @h7x4",
+  "jisho_phraseData_common": "Common",
+  "jisho_phraseData_uncommon": "Uncommon",
+  "jisho_phraseData_show_meanings": "Show more meanings",
+  "jisho_phraseData_search_individually": "Search individually",
+  "jisho_phraseData_readings": "Readings"
 }
