--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -175,7 +175,8 @@
   "tutorial_skip": "Tutorial überspringen",
   "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.",
   "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Man kann üben oder Schreib, Lese oder Erkennungstests machen.",
-  "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Details sehen: Lesung (mit der Option, es mit TTS anzuhören), das Wort selbst, Bedeutung, Statistik in Bezug auf Lerntypen und Erstellungsdatum.",
+  "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit TTS anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
+  "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Schlaganfall-Video zu erleichtern.",
   "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen oder Erkennen",
   "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!",
   "jisho_no_match": "Konnte keine Übereinstimmung in jisho.org finden",
