--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -175,7 +175,8 @@
   "tutorial_skip": "Skip Tutorial",
   "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests.",
   "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading or recognition tests.",
-  "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it using TTS), the word itself, meaning, statistics in reference to learning types and date of creation.",
+  "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it with TTS), option to see extra data of the word with Jisho.org, meaning, statistics in reference to learning types and creation date.",
+  "tutorial_jisho": "Together with Jisho.org, different data of the kanji or word is extracted to facilitate the learning of the word with examples in sentences, on'yomi, kun'yomi and stroke video.",
   "tutorial_practicing": "When practicing or doing tests, you will have to validate each word or character to denote the note of the word itself. It is the aggregate of these scores that determines the total score of your lists. The method of validation varies between learning modes: writing, reading, or recognition.",
   "tutorial_options": "There are more options in the Settings, be sure to try them out!\n\nLet's begin!",
   "jisho_no_match": "Could not find any match in jisho.org",
