--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -175,7 +175,8 @@
   "tutorial_skip": "Saltar Tutorial",
   "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.",
   "tutorial_lists": "Esta es la vista detalle de una lista. Aquí verás todas las palabras incluidas en la lista con colores, denotando su nota individual. Podrás practicar o hacer tests de escritura, lectura o reconocimiento.",
-  "tutorial_details": "Al pulsar en una palabra se podrá ver la propia palabra con todos sus datos: lectura (con opción a escucharla con TTS), la palabra en sí, significado, estadísticas en referencia a los tipos de aprendizaje y fecha de creación.",
+  "tutorial_details": "Al pulsar en una palabra se podrá ver la propia palabra con todos sus datos: lectura (con opción a escucharla con TTS), opción para ver datos extra de la palabra con Jisho.org, significado, estadísticas en referencia a los tipos de aprendizaje y fecha de creación.",
+  "tutorial_jisho": "Junto con Jisho.org, se extraen distintos datos del kanji o palabra para facilitar el aprendizaje del mismo con ejemplos en frases, on'yomi, kun'yomi y vídeo del trazado.",
   "tutorial_practicing": "Al practicar o hacer tests, tendrás que validar cada palabra o caracter para denotar la nota de la propia palabra. El conjunto de estas notas es la que determina la nota total de tus listas. El método de validación varía entre modos de apredizaje: escritura, lectura o reconocimiento.",
   "tutorial_options": "Hay más opciones en los Ajustes, ¡asegúrate de probarlas!\n\n¡Empecemos!",
   "jisho_no_match": "No se ha podido encontrar ninguna coincidencia en jisho.org",
