Changed ListViews with explicit height with Columns for Examples & ChipType

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -191,6 +191,7 @@
   "jisho_resultData_powered_by": "Powered by Jisho & @h7x4",
   "jisho_phraseData_common": "Common",
   "jisho_phraseData_uncommon": "Uncommon",
+  "jisho_phraseData_unknown": "Unknown",
   "jisho_phraseData_show_meanings": "Show more meanings",
   "jisho_phraseData_search_individually": "Search individually",
   "jisho_phraseData_readings": "Readings"
