--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -191,6 +191,7 @@
   "jisho_resultData_powered_by": "Desarrollado por Jisho & @h7x4",
   "jisho_phraseData_common": "Común",
   "jisho_phraseData_uncommon": "Poco Común",
+  "jisho_phraseData_unknown": "Desconocido",
   "jisho_phraseData_show_meanings": "Mostrar más significados",
   "jisho_phraseData_search_individually": "Buscar individualmente",
   "jisho_phraseData_readings": "Lecturas"
