--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -36,6 +36,7 @@
   "add_kanji_textForm_meaning_ext": "Möbel",
   "add_kanji_save": "Speichern",
   "add_kanji_saveAndNext": "Weiteres hinzufügen",
+  "add_kanji_copy": "Kopie an Beton.",
   "backup_bloc_creation_successful": "Datensicherung erfolgreich erstellt",
   "backup_bloc_creation_failed": "Beim Erstellen der Datensicherung ist ein Fehler aufgetreten:",
   "backup_bloc_merge_successful": "Datensicherung erfolgreich installiert ",
