--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -35,23 +35,23 @@
   "add_kanji_textForm_meaning": "Bedeutung",
   "add_kanji_textForm_meaning_ext": "Möbel",
   "add_kanji_save": "Speichern",
-  "add_kanji_saveAndNext": "Weiteres hinzufügen",
-  "add_kanji_copy": "Kopie an Beton.",
+  "add_kanji_saveAndNext": "Weiteres Kanji hinzufügen",
+  "add_kanji_copy": "Als Betonung kopieren",
   "backup_bloc_creation_successful": "Datensicherung erfolgreich erstellt",
   "backup_bloc_creation_failed": "Beim Erstellen der Datensicherung ist ein Fehler aufgetreten:",
-  "backup_bloc_merge_successful": "Datensicherung erfolgreich installiert ",
-  "backup_bloc_merge_failed": "Beim Installation der Datensicherung ist ein Fehler aufgetreten:",
+  "backup_bloc_merge_successful": "Datensicherung erfolgreich zusammengeführt ",
+  "backup_bloc_merge_failed": "Beim zusammenführen der Datensicherung ist ein Fehler aufgetreten:",
   "backup_bloc_removal_successful": "Datensicherung erfolgreich entfernt",
   "backup_bloc_removal_failed": "Beim Entfernen der Datensicherung ist ein Fehler aufgetreten: ",
   "backup_title": "Datensicherungen",
   "backup_creation_tile": "Datensicherung erstellen",
-  "backup_merge_tile": "Datensicherung installieren",
+  "backup_merge_tile": "Datensicherung zusammenführen",
   "backup_removal_tile": "Datensicherung löschen",
   "backup_creation_dialog_title": "Datensicherung wird erstellt",
   "backup_creation_dialog_content": "Die Datensicherung wird in der Cloud erstellt. Die aktuellen Daten auf Ihrem Gerät werden gespeichert und ersetzen die aktuellen Sicherungsdaten. Tests werden nicht gespeichert. Wollen Sie fortfahren? ",
   "backup_creation_dialog_positive": "Erstellen",
-  "backup_merge_dialog_title": "Installation Datensicherungseinträge",
-  "backup_merge_dialog_content": "Die Sicherungsdaten werden auf Ihrem Gerät installiert und mit den aktuellen Daten, die Sie haben, ersetzt. Wollen Sie fortfahren? ",
+  "backup_merge_dialog_title": "Kombiniere Datensicherungseinträge",
+  "backup_merge_dialog_content": "Die Sicherungsdaten werden auf Ihrem Gerät installiert. Entsprechend werden Ihre aktuellen Daten, die auf ihrem Gerät sind, ersetzt. Wollen Sie fortfahren? ",
   "backup_merge_dialog_positive": "Installieren",
   "backup_removal_dialog_title": "Datensicherung wird entfernt",
   "backup_removal_dialog_content": "Die Sicherungsdaten werden vollständig vom Server entfernt und stehen nicht mehr zur Verfügung. Wollen Sie fortfahren?",
@@ -139,7 +139,7 @@
   "settings_title": "Einstellungen",
   "settings_general": "Allgemein",
   "settings_general_theme": "Theme wechseln",
-  "settings_general_toggle": "Testergebnisse beeinflussen Ihr Praxisergebnis",
+  "settings_general_toggle": "Testergebnisse beeinflussen Ihre Übungsergebnisse",
   "settings_general_toggle_sub": "Wenn diese Funktion aktiviert ist, wirkt sich die Punktzahl eines beliebigen Wortes in einem Test auf die Gesamtpunktzahl der jeweiligen KanListe(n) aus.",
   "settings_general_testHistory": "Testverlauf",
   "settings_tutorial_label": "Tutorial anzeigen",
@@ -177,8 +177,8 @@
   "tutorial_skip": "Tutorial überspringen",
   "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.",
   "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Man kann üben oder Schreib, Lese oder Erkennungstests machen.",
-  "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit TTS anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
-  "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Schlaganfall-Video zu erleichtern.",
+  "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit Text to Speech anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
+  "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Stroke Video zu erleichtern.",
   "tutorial_practicing": "Wenn Sie üben oder Tests machen, müssen Sie jedes Wort oder Zeichen validieren, um die Note des Wortes selbst zu bezeichnen. Die Gesamtpunktzahl Ihrer Listen ergibt sich aus der Summe dieser Punktzahlen. Die Methode der Validierung ist je nach Lernmodus unterschiedlich: Schreiben, Lesen oder Erkennen",
   "tutorial_options": "Es gibt noch mehr Optionen in den Einstellungen, also probieren Sie sie aus!\n\nBeginnen wir!",
   "jisho_no_match": "Konnte keine Übereinstimmung in jisho.org finden",
@@ -190,19 +190,19 @@
   "jisho_resultData_onyomi": "On'yomi",
   "jisho_resultData_phrases_label": "Beispiele Phrasen",
   "jisho_resultData_examples_label": "Beispiele",
-  "jisho_resultData_powered_by": "Angetrieben durch Jisho & @h7x4",
+  "jisho_resultData_powered_by": "Powered by Jisho & @h7x4",
   "jisho_phraseData_common": "Allgemein",
   "jisho_phraseData_uncommon": "Ungebräuchlich",
   "jisho_phraseData_unknown": "Unbekannt",
   "jisho_phraseData_show_meanings": "Mehr Bedeutungen anzeigen",
   "jisho_phraseData_search_individually": "Individuell suchen",
   "jisho_phraseData_readings": "Lesungen",
-  "jisho_gif_not_loaded": "Konnte das GIF des Strichs nicht laden :(",
+  "jisho_gif_not_loaded": "Konnte das GIF der Strichfolge nicht laden :(",
   "test_mode_selection": "Auswahltest",
   "test_mode_blitz": "Blitztest",
   "test_mode_remembrance": "Gedächtnistest",
   "test_selection_label": "Wählen Sie einen Test aus, den Sie durchführen möchten",
   "remembrance_bottom_sheet_title": "Einen Gedächtnistest durchführen",
   "remembrance_bottom_sheet_content": "Kanji, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
-  "remembrance_bottom_sheet_label": "Remembrance"
+  "remembrance_bottom_sheet_label": "Erinnerung"
 }
