--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -204,5 +204,6 @@
   "test_selection_label": "Wählen Sie einen Test aus, den Sie durchführen möchten",
   "remembrance_bottom_sheet_title": "Einen Gedächtnistest durchführen",
   "remembrance_bottom_sheet_content": "Kanji, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
-  "remembrance_bottom_sheet_label": "Erinnerung"
+  "remembrance_bottom_sheet_label": "Erinnerung",
+  "image_not_loaded": "Bild kann nicht geladen werden :("
 }
