--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -10,9 +10,11 @@
   "study_modes_writing": "Writing",
   "study_modes_reading": "Reading",
   "study_modes_recognition": "Recognition",
+  "study_modes_listening": "Listening",
   "study_modes_writing_ext": "書く",
   "study_modes_reading_ext": "読む",
   "study_modes_recognition_ext": "認識",
+  "study_modes_listening_ext": "聴聞",
   "study_mode_update_handler_poppedTest_content": "The test will result invalid and no result will be provided.",
   "study_mode_update_handler_finishedTest_content": "Tap on 'Finish' to see the results.",
   "study_mode_update_handler_poppedPractice_content": "Score up to this kanji will be saved. Current kanji will be count as 50%.",
