--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -152,6 +152,7 @@
   "settings_information_developer_label": "Desarrollador",
   "settings_information_license_label": "Licencias",
   "settings_information_terms_label": "Legal",
+  "settings_information_about_label": "Copyright",
   "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
   "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
   "test_history_showRemoveTestsDialog_positive": "Eliminar",
