--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -152,6 +152,7 @@
   "settings_information_developer_label": "Developer",
   "settings_information_license_label": "Licenses",
   "settings_information_terms_label": "Legal",
+  "settings_information_about_label": "Copyright",
   "test_history_showRemoveTestsDialog_title": "Removing All Tests",
   "test_history_showRemoveTestsDialog_content": "All tests saved on this device will be removed. This action cannot be undone. Do you want to proceed?",
   "test_history_showRemoveTestsDialog_positive": "Remove",
