--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -205,5 +205,12 @@
   "remembrance_bottom_sheet_title": "Hacer un test de recuerdo",
   "remembrance_bottom_sheet_content": "kanji que no hayas visto en mucho tiempo serán seleccionados. ¡Empecemos el test de recuerdo!",
   "remembrance_bottom_sheet_label": "Recuerdo",
-  "image_not_loaded": "No se ha podido cargar la imagen :("
+  "image_not_loaded": "No se ha podido cargar la imagen :(",
+  "dict_title": "Diccionario Kanji",
+  "dict_search_bar_hint": "Dibuja un kanji y busca su significado",
+  "dict_search_empty": "Dibuja un kanji primero",
+  "dict_search_button_title": "Buscar",
+  "dict_predictions_most_likely": "Más probable",
+  "dict_predictions_less_likely": "Menos probable",
+  "dict_predictions_disclaimer": "La función de búsqueda utiliza algoritmos de Machine Learning y las predicciones pueden no corresponderse con lo que hayas dibujado. Si las predicciones no son acertadas, intenta dibujar el kanji otra vez."
 }
