--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -23,6 +23,7 @@
   "study_mode_update_handler_popped_title": "Do you want to leave?",
   "study_mode_update_handler_finished_positive": "Finish",
   "study_mode_update_handler_popped_positive": "Leave",
+  "add_kanji_createKanji_successful": "Kanji created in KanList successfully",
   "add_kanji_createKanji_failed_insertion": "Error creating kanji",
   "add_kanji_createKanji_failed": "Generic error creating kanji",
   "add_kanji_updateKanji_failed_update": "Error updating kanji",
@@ -212,5 +213,6 @@
   "dict_search_button_title": "Search",
   "dict_predictions_most_likely": "Most likely",
   "dict_predictions_less_likely": "Less likely",
-  "dict_predictions_disclaimer": "Search function uses Machine Learning algorithms and the predictions may not be aligned with what you draw. If the predictions are not accurate, try drawing the kanji again."
+  "dict_predictions_disclaimer": "Search function uses Machine Learning algorithms and the predictions may not be aligned with what you draw. If the predictions are not accurate, try drawing the kanji again.",
+  "dict_jisho_add_kanji_bottom_sheet_title": "Select a KanList to add the word"
 }
