Fixed DevInfo BS

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -135,6 +135,7 @@
   "developer_info_label": "Entwickler-Informationen",
   "developer_info_follow": "@gabrielglbh auf GitHub",
   "developer_info_report": "Fehler melden an",
+  "developer_info_github_issue": "Probleme über GitHub melden",
   "launch_url_failed": "Website konnte nicht gestartet werden",
   "settings_title": "Einstellungen",
   "settings_general": "Allgemein",
