Test numbers added

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -203,10 +203,16 @@
   "test_mode_selection": "Auswahltest",
   "test_mode_blitz": "Blitztest",
   "test_mode_remembrance": "Gedächtnistest",
+  "test_mode_number": "Nummertest",
   "test_selection_label": "Wählen Sie einen Test aus, den Sie durchführen möchten",
   "remembrance_bottom_sheet_title": "Einen Gedächtnistest durchführen",
   "remembrance_bottom_sheet_content": "Kanji, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
   "remembrance_bottom_sheet_label": "Erinnerung",
+  "number_bottom_sheet_title": "Mach einen Zahlentest",
+  "number_bottom_sheet_content": "Zufallszahlen von 0 bis 10 Millionen werden ausgewählt, um Ihr Hörverständnis zu trainieren. Machen wir den Zahlentest!",
+  "number_bottom_sheet_label": "Zufallszahlen",
+  "number_bottom_sheet_begin_ext": "始める",
+  "number_bottom_sheet_begin": "Start",
   "image_not_loaded": "Bild kann nicht geladen werden :(",
   "dict_title": "Kanji-Wörterbuch",
   "dict_search_bar_hint": "Zeichne ein Kanji und suche seine Bedeutung",
