--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -203,10 +203,16 @@
   "test_mode_selection": "Selection Test",
   "test_mode_blitz": "Blitz Test",
   "test_mode_remembrance": "Remembrance Test",
+  "test_mode_number": "Number Test",
   "test_selection_label": "Select a test to perform",
   "remembrance_bottom_sheet_title": "Make a remembrance test",
   "remembrance_bottom_sheet_content": "kanji that you have not seen for a long time will be selected. Let's take the remembrance test!",
   "remembrance_bottom_sheet_label": "Remembrance",
+  "number_bottom_sheet_title": "Make a number test",
+  "number_bottom_sheet_content": "random numbers from 0 to 10 million will be selected to train your listening. Let's take the number test!",
+  "number_bottom_sheet_label": "Random Numbers",
+  "number_bottom_sheet_begin_ext": "始める",
+  "number_bottom_sheet_begin": "Begin",
   "image_not_loaded": "Could not load image :(",
   "dict_title": "Kanji Dictionary",
   "dict_search_bar_hint": "Draw a kanji and search its meaning",
