--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -203,10 +203,16 @@
   "test_mode_selection": "Test de Selección",
   "test_mode_blitz": "Test Blitz",
   "test_mode_remembrance": "Test de Recuerdo",
+  "test_mode_number": "Test de Números",
   "test_selection_label": "Selecciona un test a realizar",
   "remembrance_bottom_sheet_title": "Hacer un test de recuerdo",
   "remembrance_bottom_sheet_content": "kanji que no hayas visto en mucho tiempo serán seleccionados. ¡Empecemos el test de recuerdo!",
   "remembrance_bottom_sheet_label": "Recuerdo",
+  "number_bottom_sheet_title": "Hacer un test de números",
+  "number_bottom_sheet_content": "números aleatorios de 0 a 10 millones serán seleccionados para entrenar tu escucha. ¡Empecemos el test de números!",
+  "number_bottom_sheet_label": "Números aleatorios",
+  "number_bottom_sheet_begin_ext": "始める",
+  "number_bottom_sheet_begin": "Empezar",
   "image_not_loaded": "No se ha podido cargar la imagen :(",
   "dict_title": "Diccionario Kanji",
   "dict_search_bar_hint": "Dibuja un kanji y busca su significado",
