Polished Number Tests - Done

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -209,7 +209,7 @@
   "remembrance_bottom_sheet_content": "Kanji, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
   "remembrance_bottom_sheet_label": "Erinnerung",
   "number_bottom_sheet_title": "Mach einen Zahlentest",
-  "number_bottom_sheet_content": "Zufallszahlen von 0 bis 10 Millionen werden ausgewählt, um Ihr Hörverständnis zu trainieren. Machen wir den Zahlentest!",
+  "number_bottom_sheet_content": "Es werden zufällige Zahlen aus dem Bereich oder den Bereichen Ihrer Wahl ausgewählt, um Ihr Hörverständnis zu trainieren. Machen wir den Zahlentest!",
   "number_bottom_sheet_label": "Zufallszahlen",
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Start",
