--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -143,6 +143,7 @@
   "settings_general_toggle": "Testergebnisse beeinflussen Ihre Übungsergebnisse",
   "settings_general_toggle_sub": "Wenn diese Funktion aktiviert ist, wirkt sich die Punktzahl eines beliebigen Wortes in einem Test auf die Gesamtpunktzahl der jeweiligen KanListe(n) aus.",
   "settings_general_testHistory": "Testverlauf",
+  "settings_general_graphs": "Datenanzeigemodus ändern",
   "settings_tutorial_label": "Tutorial anzeigen",
   "settings_general_versionNotes": "Versionshinweise",
   "settings_account_section": "Konto verwalten",
