--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -143,6 +143,7 @@
   "settings_general_toggle": "Test scores impact in your practice",
   "settings_general_toggle_sub": "When active, the score of any word on any test will affect the overall score of the respective KanList(s)",
   "settings_general_testHistory": "Test History",
+  "settings_general_graphs": "Change data display mode",
   "settings_tutorial_label": "Show tutorial",
   "settings_general_versionNotes": "Version Notes",
   "settings_account_section": "Manage Account",
