Moved dictionary to app bar

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -215,7 +215,7 @@
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Start",
   "image_not_loaded": "Bild kann nicht geladen werden :(",
-  "dict_title": "Kanji-Wörterbuch",
+  "dict_title": "Wörterbuch",
   "dict_search_bar_hint": "Zeichne ein Kanji und suche seine Bedeutung",
   "dict_search_empty": "Zeichnen Sie zuerst ein Kanji",
   "dict_search_button_title": "Suchen",
