--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -215,7 +215,7 @@
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Empezar",
   "image_not_loaded": "No se ha podido cargar la imagen :(",
-  "dict_title": "Diccionario Kanji",
+  "dict_title": "Diccionario",
   "dict_search_bar_hint": "Dibuja un kanji y busca su significado",
   "dict_search_empty": "Dibuja un kanji primero",
   "dict_search_button_title": "Buscar",
