--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -215,7 +215,7 @@
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Begin",
   "image_not_loaded": "Could not load image :(",
-  "dict_title": "Kanji Dictionary",
+  "dict_title": "Dictionary",
   "dict_search_bar_hint": "Draw a kanji and search its meaning",
   "dict_search_empty": "Draw a kanji first",
   "dict_search_button_title": "Search",
