Solved #40 - TR: Kanji -> Word

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -17,21 +17,21 @@
   "study_modes_listening_ext": "聴聞",
   "study_mode_update_handler_poppedTest_content": "The test will result invalid and no result will be provided.",
   "study_mode_update_handler_finishedTest_content": "Tap on 'Finish' to see the results.",
-  "study_mode_update_handler_poppedPractice_content": "Score up to this kanji will be saved. Current kanji will be count as 50%.",
+  "study_mode_update_handler_poppedPractice_content": "Score up to this word will be saved. Current word will be count as 50%.",
   "study_mode_update_handler_finishedPractice_content": "Tap on 'Finish' to end the study session.",
   "study_mode_update_handler_finished_title": "You are done!",
   "study_mode_update_handler_popped_title": "Do you want to leave?",
   "study_mode_update_handler_finished_positive": "Finish",
   "study_mode_update_handler_popped_positive": "Leave",
-  "add_kanji_createKanji_successful": "Kanji created in KanList successfully",
-  "add_kanji_createKanji_failed_insertion": "Error creating kanji",
-  "add_kanji_createKanji_failed": "Generic error creating kanji",
-  "add_kanji_updateKanji_failed_update": "Error updating kanji",
-  "add_kanji_updateKanji_failed": "Generic error updating kanji",
+  "add_kanji_createKanji_successful": "Word created in KanList successfully",
+  "add_kanji_createKanji_failed_insertion": "Error creating word: word is already in other list",
+  "add_kanji_createKanji_failed": "Generic error creating word",
+  "add_kanji_updateKanji_failed_update": "Error updating word",
+  "add_kanji_updateKanji_failed": "Generic error updating word",
   "add_kanji_validateKanji_failed": "Fill up the form correctly",
   "add_kanji_update_title": "Update",
   "add_kanji_new_title": "Add",
-  "add_kanji_textForm_kanji": "Kanji",
+  "add_kanji_textForm_kanji": "Word",
   "add_kanji_textForm_kanji_ext": "家具",
   "add_kanji_textForm_reading": "Pronunciation",
   "add_kanji_textForm_reading_ext": "かぐ",
@@ -86,27 +86,27 @@
   "login_manage_backup_title": "Manage your back up",
   "login_miscellaneous_title": "Misc",
   "login_close_session_title": "Close Session",
-  "kanji_bottom_sheet_removeKanji_title": "Remove a Kanji",
-  "kanji_bottom_sheet_removeKanji_content": "Are you sure you want to remove this kanji?",
+  "kanji_bottom_sheet_removeKanji_title": "Remove a word",
+  "kanji_bottom_sheet_removeKanji_content": "Are you sure you want to remove this word?",
   "kanji_bottom_sheet_removeKanji_positive": "Remove",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Error removing kanji",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Generic error removing kanji",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Error removing word",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Generic error removing word",
   "wildcard": "?",
   "created_label": "Created",
   "last_seen_label": "Last seen",
   "kanji_bottom_sheet_update_label": "Update",
   "kanji_bottom_sheet_removal_label": "Remove",
-  "list_details_loadUpPractice_failed": "Add new Kanji to study first!",
+  "list_details_loadUpPractice_failed": "Add new words to study first!",
   "list_details_updateKanListName_title": "Change KanList Name",
   "list_details_updateKanListName_header": "Name",
   "list_details_updateKanListName_positive": "Update",
-  "list_details_load_failed": "Failed to retrieve kanji",
+  "list_details_load_failed": "Failed to retrieve words",
   "list_details_practice_button_label": "Practice",
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Spatial Learning",
   "list_details_learningMode_random": "Random Learning",
-  "list_details_empty": "No available kanji.",
-  "list_details_searchBar_hint": "Search by kanji, meaning, pronunciation",
+  "list_details_empty": "No available words.",
+  "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "Are you sure you want to remove this list and all its content?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Remove",
@@ -123,7 +123,7 @@
   "kanji_lists_versionDialog_button_label": "Go to store",
   "kanji_lists_versionDialog_title": "New version available",
   "kanji_lists_versionDialog_notes": "Version Notes:",
-  "kanji_lists_searchBar_hint": "Search by list name, kanji, meaning, pronunciation",
+  "kanji_lists_searchBar_hint": "Search by list name, word, meaning, pronunciation",
   "kanji_lists_newUpdateAvailable_label": "New Update!!",
   "kanji_lists_load_failed": "Failed to retrieve lists.",
   "kanji_lists_empty": "No available lists.",
@@ -169,7 +169,7 @@
   "writing_next_kanji_label": "Next",
   "writing_validation_failed": "Write the something first",
   "blitz_bottom_sheet_title": "Make a blitz test",
-  "blitz_bottom_sheet_content": "random kanji will be selected. Let's take the blitz test!",
+  "blitz_bottom_sheet_content": "random words will be selected. Let's take the blitz test!",
   "blitz_bottom_sheet_label": "Blitz",
   "blitz_bottom_sheet_on_label": "Blitz on",
   "back_button_label": "Back",
@@ -208,7 +208,7 @@
   "test_mode_number": "Number Test",
   "test_selection_label": "Select a test to perform",
   "remembrance_bottom_sheet_title": "Make a remembrance test",
-  "remembrance_bottom_sheet_content": "kanji that you have not seen for a long time will be selected. Let's take the remembrance test!",
+  "remembrance_bottom_sheet_content": "words that you have not seen for a long time will be selected. Let's take the remembrance test!",
   "remembrance_bottom_sheet_label": "Remembrance",
   "number_bottom_sheet_title": "Make a number test",
   "number_bottom_sheet_content": "random numbers from the range or ranges of your choice will be selected to train your listening. Let's take the number test!",
