--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -17,21 +17,21 @@
   "study_modes_listening_ext": "聴聞",
   "study_mode_update_handler_poppedTest_content": "Das Testergebnis ist ungültig und es wird kein Ergebnis ausgegeben.",
   "study_mode_update_handler_finishedTest_content": "Tippen Sie auf „Fertig stellen“, um die Ergebnisse anzuzeigen.",
-  "study_mode_update_handler_poppedPractice_content": "Punkte bis zu diesem Kanji werden gespeichert. Punkte für das aktuelle Kanji werden halbiert. ",
+  "study_mode_update_handler_poppedPractice_content": "Punkte bis zu diesem Wort werden gespeichert. Punkte für das aktuelle Wort werden halbiert. ",
   "study_mode_update_handler_finishedPractice_content": "Tippen Sie auf „Fertig stellen“, um die Lernsitzung zu beenden.",
   "study_mode_update_handler_finished_title": "Sie sind fertig!",
   "study_mode_update_handler_popped_title": "Wirklich beenden?",
   "study_mode_update_handler_finished_positive": "Abschließen",
   "study_mode_update_handler_popped_positive": "Verlassen",
-  "add_kanji_createKanji_successful": "Kanji in KanList erfolgreich erstellt",
-  "add_kanji_createKanji_failed_insertion": "Fehler beim Erstellen des Kanji ",
-  "add_kanji_createKanji_failed": "Allgemeiner Fehler beim Erstellen des Kanji ",
-  "add_kanji_updateKanji_failed_update": "Fehler beim Aktualisieren des Kanji ",
-  "add_kanji_updateKanji_failed": "Allgemeiner Fehler beim Aktualisieren von Kanji ",
+  "add_kanji_createKanji_successful": "Wort in KanList erfolgreich erstellt",
+  "add_kanji_createKanji_failed_insertion": "Fehler beim Erstellen das Wort: Das Wort ist bereits in einer anderen Liste enthalten",
+  "add_kanji_createKanji_failed": "Allgemeiner Fehler beim Erstellen das Wort ",
+  "add_kanji_updateKanji_failed_update": "Fehler beim Aktualisieren das Wort ",
+  "add_kanji_updateKanji_failed": "Allgemeiner Fehler beim Aktualisieren von Wort ",
   "add_kanji_validateKanji_failed": "Fehler beim Ausfüllen des Formulars",
   "add_kanji_update_title": "Aktualisieren",
   "add_kanji_new_title": "Hinzufügen",
-  "add_kanji_textForm_kanji": "Kanji",
+  "add_kanji_textForm_kanji": "Wort",
   "add_kanji_textForm_kanji_ext": "家具",
   "add_kanji_textForm_reading": "Betonung",
   "add_kanji_textForm_reading_ext": "かぐ",
@@ -86,27 +86,27 @@
   "login_manage_backup_title": "Verwalten Sie Ihre Datensicherungen",
   "login_miscellaneous_title": "Verschiedenes",
   "login_close_session_title": "Sitzung beenden",
-  "kanji_bottom_sheet_removeKanji_title": "Kanji entfernen",
-  "kanji_bottom_sheet_removeKanji_content": "Möchten Sie dieses Kanji wirklich entfernen? ",
+  "kanji_bottom_sheet_removeKanji_title": "Wort entfernen",
+  "kanji_bottom_sheet_removeKanji_content": "Möchten Sie dieses Wort wirklich entfernen? ",
   "kanji_bottom_sheet_removeKanji_positive": "Entfernen",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Fehler beim Entfernen von Kanji",
-  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Allgemeiner Fehler beim Entfernen von Kanji",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_removal_failed": "Fehler beim Entfernen von Wort",
+  "kanji_bottom_sheet_createDialogForDeletingKanji_failed": "Allgemeiner Fehler beim Entfernen von Wort",
   "wildcard": "?",
   "created_label": "Erstellt",
   "last_seen_label": "Zuletzt gesehen",
   "kanji_bottom_sheet_update_label": "Aktualisieren",
   "kanji_bottom_sheet_removal_label": "Entfernen",
-  "list_details_loadUpPractice_failed": "Fügen Sie zuerst Kanji hinzu, die Sie lernen möchten",
+  "list_details_loadUpPractice_failed": "Fügen Sie zuerst Wort hinzu, die Sie lernen möchten",
   "list_details_updateKanListName_title": "KanList-Namen ändern ",
   "list_details_updateKanListName_header": "Name",
   "list_details_updateKanListName_positive": "Aktualisieren",
-  "list_details_load_failed": "Kanji konnte nicht abgerufen werden ",
+  "list_details_load_failed": "Wort konnte nicht abgerufen werden ",
   "list_details_practice_button_label": "Üben",
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Spaced repetition",
   "list_details_learningMode_random": "Zufälliges Lernen",
-  "list_details_empty": "Kein verfügbares Kanji. ",
-  "list_details_searchBar_hint": "Suche nach Kanji, Bedeutung, Aussprache",
+  "list_details_empty": "Kein verfügbares Wort. ",
+  "list_details_searchBar_hint": "Suche nach Wort, Bedeutung, Aussprache",
   "kan_list_tile_createDialogForDeletingKanList_title": "KanList entfernen",
   "kan_list_tile_createDialogForDeletingKanList_content": "Möchten Sie diese Liste und ihren gesamten Inhalt wirklich entfernen?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Entfernen ",
@@ -123,7 +123,7 @@
   "kanji_lists_versionDialog_button_label": "Playstore besuchen",
   "kanji_lists_versionDialog_title": "Neue Version verfügbar",
   "kanji_lists_versionDialog_notes": "Anmerkungen zur Version:",
-  "kanji_lists_searchBar_hint": "Suche nach Listenname, Kanji, Bedeutung, Aussprache",
+  "kanji_lists_searchBar_hint": "Suche nach Listenname, Wort, Bedeutung, Aussprache",
   "kanji_lists_newUpdateAvailable_label": "Neue Version!",
   "kanji_lists_load_failed": "Fehler beim Abrufen der Listen.",
   "kanji_lists_empty": "Keine verfügbaren Listen.",
@@ -169,7 +169,7 @@
   "writing_next_kanji_label": "Nächste",
   "writing_validation_failed": "Schreibe zuerst das Etwas",
   "blitz_bottom_sheet_title": "Machen Sie einen Blitztest ",
-  "blitz_bottom_sheet_content": "Zufällige Kanji werden ausgewählt. Machen wir den Blitztest!",
+  "blitz_bottom_sheet_content": "Zufällige Wort werden ausgewählt. Machen wir den Blitztest!",
   "blitz_bottom_sheet_label": "Blitz",
   "blitz_bottom_sheet_on_label": "Blitz an",
   "back_button_label": "Zurück",
@@ -208,7 +208,7 @@
   "test_mode_number": "Nummertest",
   "test_selection_label": "Wählen Sie einen Test aus, den Sie durchführen möchten",
   "remembrance_bottom_sheet_title": "Einen Gedächtnistest durchführen",
-  "remembrance_bottom_sheet_content": "Kanji, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
+  "remembrance_bottom_sheet_content": "Wort, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
   "remembrance_bottom_sheet_label": "Erinnerung",
   "number_bottom_sheet_title": "Mach einen Zahlentest",
   "number_bottom_sheet_content": "Es werden zufällige Zahlen aus dem Bereich oder den Bereichen Ihrer Wahl ausgewählt, um Ihr Hörverständnis zu trainieren. Machen wir den Zahlentest!",
